fix issue with flickering on deck change

--- a/styles/planning-poker.scss
+++ b/styles/planning-poker.scss
@@ -12,7 +12,6 @@
 
 md-card {
 	width: 60px;
-	transition: background-color 0.2s ease, color 0.2s ease;;
 
 	md-card-content {
 		padding: 16px 8px;
